packages/fuels-abigen-macro/tests/ui/abigen_macro/unrecognized_attribute.stderr
error: Attribute 'unknown' not recognized! Expected one of: 'name', 'abi'.
 --> tests/ui/abigen_macro/unrecognized_attribute.rs:6:5
  |
6 |     unknown = "something"
  |     ^^^^^^^
