packages/fuels-abigen-macro/tests/ui/abigen_macro/unrecognized_attribute.rs
use fuels_abigen_macro::abigen;

abigen!(Contract(
    name = "SomeName",
    abi = "some-abi.json",
    unknown = "something"
));

fn main() {}
